--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body{overflow:hidden;margin:0 auto;padding:0;max-width:640px;height:100%;font-si
 	<p>项目地址：<a href="">github</a></p>
 	<p>更多教程请访问：<a href="http://ued.sexy">ued.sexy</a></p>
 </div>
-<script type="text/javascript" src="js/drop.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/drop2.js"></script>
+<script type="text/javascript" src="js/index2.js"></script>
 </body>
 </html>
