--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<title>下拉刷新</title>
+<title>下拉刷新--ued天机</title>
 <style type="text/css">
 *{-webkit-text-size-adjust:none;}
 html{height:100%;}
@@ -21,7 +21,7 @@ body{overflow:hidden;margin:0 auto;padding:0;max-width:640px;height:100%;font-si
 	</div>
 </div>
 <div class="cr">
-	<p>项目地址：<a href="">github</a></p>
+	<p>项目地址：<a href="https://github.com/cyclegtx/drop.js">github</a></p>
 	<p>更多教程请访问：<a href="http://ued.sexy">ued.sexy</a></p>
 </div>
 <script type="text/javascript" src="js/drop.js"></script>
